--- a/Shop.html
+++ b/Shop.html
@@ -5,330 +5,226 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop - Aarul.online</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            background-color: #f4f4f9;
-            height: 100vh;
-            overflow: hidden;
-        }
+        /* ===== BASE STYLES ===== */
+		body {
+			font-family: Arial, sans-serif;
+			margin: 0;
+			padding: 0;
+			background-color: #f4f4f9;
+			min-height: 100vh;
+		}
 
-        .sidebar {
-            width: 230px;
-            background-color: #343a40;
-            padding: 20px;
-            color: #fff;
-            position: fixed; /* Fix the sidebar position */
-            top: 0;
-            left: 0;
-            height: 100vh; /* Full height */
-            overflow-y: auto;
-            z-index: 10; /* Ensure it stays above content */
-        }
+		/* ===== TOP NAVIGATION BAR ===== */
+		.top-navbar {
+			display: flex;
+			flex-direction: column;
+			background-color: #111;
+			color: white;
+			padding: 15px;
+			text-align: center;
+			position: sticky;
+			top: 0;
+			z-index: 1000;
+			box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+		}
 
-        .sidebar h2 {
-            font-size: 1.5rem;
-            margin-bottom: 15px;
-            color: #ffc107;
-            text-align: center;
-        }
+		.top-navbar .nav-title {
+			font-size: 24px;
+			font-weight: bold;
+			margin-bottom: 10px;
+		}
 
-        .sidebar ul {
-            list-style-type: none;
-            padding: 0;
-        }
+		.nav-links {
+			display: flex;
+			justify-content: center;
+			flex-wrap: wrap;
+			gap: 15px;
+		}
 
-        .sidebar ul li {
-            margin: 10px 0;
-        }
+		.nav-links a {
+			color: white;
+			text-decoration: none;
+			font-weight: 500;
+			padding: 8px 14px;
+			border-radius: 4px;
+			transition: background-color 0.3s ease;
+		}
 
-        .sidebar ul li a {
-            text-decoration: none;
-            color: #adb5bd;
-            font-size: 1rem;
-            display: block;
-            padding: 10px;
-            border-radius: 5px;
-        }
+		.nav-links a:hover {
+			background-color: #333;
+		}
 
-        .sidebar ul li a:hover, .sidebar ul li a.active {
-            background-color: #495057;
-            color: #ffc107;
-        }
+		/* ===== HOME BUTTON STYLE (in navbar) ===== */
+		.home-button {
+			background-color: #007bff;
+			color: white;
+			text-decoration: none;
+			font-weight: bold;
+			padding: 8px 14px;
+			border-radius: 4px;
+			transition: background-color 0.3s ease;
+		}
 
-        .content {
-            flex: 1;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow-y: auto;
-            margin-left: 270px; /* Ensure content does not overlap sidebar */
-            height: 100vh;
-            overflow-x: hidden;
-            overflow-y: scroll;
-        }
+		.home-button:hover {
+			background-color: #0056b3;
+		}
 
-        .content h1 {
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 2rem;
-            color: #343a40;
-        }
+		/* ===== MAIN CONTENT ===== */
+		.content {
+			padding: 20px;
+			background-color: #fff;
+			max-width: 1200px;
+			margin: 0 auto;
+			min-height: calc(100vh - 120px); /* Adjust if your navbar changes height */
+			overflow-y: auto;
+		}
 
-        .product-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
+		.content h1 {
+			text-align: center;
+			margin-bottom: 30px;
+			font-size: 2rem;
+			color: #343a40;
+		}
 
-        .product {
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            overflow: hidden;
-            text-align: center;
-            background-color: #fff;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
+		/* ===== PRODUCT GRID ===== */
+		.product-grid {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+			gap: 20px;
+		}
 
-        .product:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-        }
+		.product {
+			border: 1px solid #ddd;
+			border-radius: 10px;
+			overflow: hidden;
+			text-align: center;
+			background-color: #fff;
+			box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+			transition: transform 0.3s, box-shadow 0.3s;
+		}
+
+		.product:hover {
+			transform: translateY(-5px);
+			box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+		}
 
 		.product img {
-		  width: 100%;
-		  max-width: 300px; /* keeps it from being too large on desktop */
-		}
-
-
-        .product h3 {
-            font-size: 1.2rem;
-            margin: 10px 0;
-            color: #343a40;
-        }
-
-        .product p {
-            font-size: 0.9rem;
-            color: #666;
-            margin: 5px 0;
-        }
-
-        .product .price {
-            font-size: 1rem;
-            color: #007bff;
-            font-weight: bold;
-            margin-bottom: 15px;
-        }
-
-        .product button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            cursor: pointer;
-            border-radius: 5px;
-            margin-bottom: 15px;
-        }
-
-        .product button:hover {
-            background-color: #0056b3;
-        }
-		
-		.home-button {
-        display: block;
-        text-align: center;
-        padding: 1px 1px;
-        margin-top: auto;
-        margin-bottom: 40px;
-        font-size: 1.1rem;
-        font-weight: bold;
-        color: #343a40;
-        background-color: #fff;
-        border: 2px solid #343a40;
-        border-radius: 8px;
-        text-decoration: none;
-        transition: background-color 0.3s, color 0.3s;
-    }
-
-    .home-button:hover {
-        background-color: #343a40;
-        color: #fff;
-    }
-
-			.sidebar {
-		  width: 250px;
-		  min-height: 100vh;
-		  background: #2d2d2d;
-		  display: flex;
-		  flex-direction: column;
-		  justify-content: space-between; /* pushes Home Page button to bottom */
-		}
-
-		.sidebar button {
-		  margin: 10px;
-		}
-		
-				@media (max-width: 768px) {
-		  .sidebar {
 			width: 100%;
-			min-height: auto;
-			flex-direction: row;
-			justify-content: space-around;
-			padding: 10px;
-			position: fixed;
-			bottom: 0;
-			left: 0;
-			z-index: 1000;
-		  }
-
-		  .sidebar button {
-			flex: 1;
-			margin: 5px;
-		  }
+			max-width: 300px;
 		}
-		
-				@media (max-width: 768px) {
-		  .home-button {
+
+		.product h3 {
+			font-size: 1.2rem;
+			margin: 10px 0;
+			color: #343a40;
+		}
+
+		.product p {
+			font-size: 0.9rem;
+			color: #666;
+			margin: 5px 0;
+		}
+
+		.product .price {
+			font-size: 1rem;
+			color: #007bff;
+			font-weight: bold;
+			margin-bottom: 15px;
+		}
+
+		.product button {
+			background-color: #007bff;
+			color: white;
+			border: none;
+			padding: 10px 15px;
+			cursor: pointer;
+			border-radius: 5px;
+			margin-bottom: 15px;
+		}
+
+		.product button:hover {
+			background-color: #0056b3;
+		}
+
+		/* ===== PRODUCT DETAILS MODAL ===== */
+		.product-details {
+			display: none;
 			position: fixed;
-			bottom: 15px;
+			top: 50%;
 			left: 50%;
-			transform: translateX(-50%);
-			z-index: 2000;
-		  }
+			transform: translate(-50%, -50%);
+			background-color: #fff;
+			border-radius: 10px;
+			box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+			width: 80%;
+			max-width: 900px;
+			z-index: 1000;
+			padding: 20px;
+			overflow-y: auto;
 		}
 
+		.product-details img {
+			width: 30%;
+			height: auto;
+			margin-bottom: 20px;
+		}
 
+		.product-details h3 {
+			font-size: 2rem;
+			margin-bottom: 10px;
+			color: #343a40;
+		}
 
+		.product-details .price {
+			font-size: 1.5rem;
+			color: #007bff;
+			font-weight: bold;
+			margin: 10px 0;
+		}
 
-		
-		/* Product details modal */
-        .product-details {
-            display: none;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-            width: 80%;
-            max-width: 900px;
-            z-index: 1000;
-            padding: 20px;
-            overflow-y: auto;
-        }
+		.product-details .description {
+			font-size: 1rem;
+			color: #666;
+			margin: 15px 0;
+		}
 
-        .product-details img {
-            width: 30%;
-            height: auto;
-            margin-bottom: 20px;
-        }
+		.product-details .rating {
+			margin: 15px 0;
+		}
 
-        .product-details h3 {
-            font-size: 2rem;
-            margin-bottom: 10px;
-            color: #343a40;
-        }
+		.product-details .rating span {
+			color: #ff9900;
+			font-size: 1.2rem;
+		}
 
-        .product-details .price {
-            font-size: 1.5rem;
-            color: #007bff;
-            font-weight: bold;
-            margin: 10px 0;
-        }
+		.product-details .buy-now {
+			background-color: #007bff;
+			color: white;
+			border: none;
+			padding: 15px 30px;
+			cursor: pointer;
+			border-radius: 5px;
+			font-size: 1.2rem;
+			width: 100%;
+			margin-top: 20px;
+		}
 
-        .product-details .description {
-            font-size: 1rem;
-            color: #666;
-            margin: 15px 0;
-        }
+		.product-details .buy-now:hover {
+			background-color: #0056b3;
+		}
 
-        .product-details .rating {
-            margin: 15px 0;
-        }
+		.product-details .close {
+			position: absolute;
+			top: 10px;
+			right: 10px;
+			background: none;
+			border: none;
+			font-size: 1.5rem;
+			cursor: pointer;
+			color: #666;
+		}
 
-        .product-details .rating span {
-            color: #ff9900;
-            font-size: 1.2rem;
-        }
-
-        .product-details .buy-now {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 15px 30px;
-            cursor: pointer;
-            border-radius: 5px;
-            font-size: 1.2rem;
-            width: 100%;
-            margin-top: 20px;
-        }
-
-        .product-details .buy-now:hover {
-            background-color: #0056b3;
-        }
-
-        .product-details .close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background: none;
-            border: none;
-            font-size: 1.5rem;
-            cursor: pointer;
-            color: #666;
-        }
-		.overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-        }
-        .product-details {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            width: 400px;
-            text-align: center;
-        }
-        .product-details img {
-            max-width: 100%;
-            border-radius: 8px;
-        }
-        .product-details button {
-            padding: 10px 20px;
-            margin-top: 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        .buy-now {
-            background-color: #007BFF;
-            color: white;
-        }
-        .buy-now:hover {
-            background-color: #0056b3;
-        }
-        .close {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 18px;
-            background: none;
-            border: none;
-            cursor: pointer;
-        }
-
-        /* Cart Modal */
+		/* ===== CART MODAL ===== */
 		.cart-modal {
 			display: none;
 			position: fixed;
@@ -342,11 +238,10 @@
 			max-width: 600px;
 			z-index: 1001;
 			padding: 20px;
-			max-height: 80vh; /* Limit the height of the modal */
-			overflow: hidden; /* Prevent content from spilling out */
+			max-height: 80vh;
+			overflow: hidden;
 		}
 
-		/* Cart Header */
 		.cart-header {
 			display: flex;
 			justify-content: space-between;
@@ -370,10 +265,9 @@
 			color: #dc3545;
 		}
 
-		/* Cart Items Container with Scroll */
 		#cart-items {
-			max-height: 400px; /* Adjust as per your design */
-			overflow-y: auto;  /* Enable scrolling */
+			max-height: 400px;
+			overflow-y: auto;
 			margin-bottom: 20px;
 		}
 
@@ -410,7 +304,6 @@
 			background-color: #c82333;
 		}
 
-		/* Cart Footer */
 		.cart-footer {
 			display: flex;
 			justify-content: space-between;
@@ -436,7 +329,7 @@
 			background-color: #0056b3;
 		}
 
-		/* Overlay */
+		/* ===== OVERLAY ===== */
 		.overlay {
 			display: none;
 			position: fixed;
@@ -448,144 +341,85 @@
 			z-index: 999;
 		}
 
-		.cart-modal {
-			display: none; /* Initially hidden */
-			position: fixed;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			background-color: #fff;
-			z-index: 1001; /* Above the overlay */
+		/* ===== SUCCESS MESSAGE (Optional) ===== */
+		.message-container {
+			font-family: Arial, sans-serif;
+			font-size: 14px;
+			animation: fadeIn 0.5s ease-in-out;
 		}
-		
-		/* Optional CSS for the success message */
-			.message-container {
-				font-family: Arial, sans-serif;
-				font-size: 14px;
-				animation: fadeIn 0.5s ease-in-out;
-			}
 
-			@keyframes fadeIn {
-				from {
-					opacity: 0;
-				}
-				to {
-					opacity: 1;
-				}
-			}
-		/* For tablets and smaller screens */
+		@keyframes fadeIn {
+			from { opacity: 0; }
+			to { opacity: 1; }
+		}
+
+		/* ===== RESPONSIVE MEDIA QUERIES ===== */
 		@media (max-width: 768px) {
-		  .container {
-			flex-direction: column;
-			padding: 10px;
-		  }
+			.nav-links {
+				flex-direction: column;
+				gap: 10px;
+			}
 
-		  .order-details, .cart-details, .order-form {
-			min-width: 100%;
-			box-sizing: border-box;
-		  }
+			.product-grid {
+				grid-template-columns: 1fr;
+			}
 
-		  .cart-details .cart-table th,
-		  .cart-details .cart-table td {
-			font-size: 0.85rem;
-			padding: 8px;
-		  }
+			.product-details {
+				width: 90%;
+			}
 
-		  input, textarea, button {
-			font-size: 0.9rem;
-			padding: 10px;
-		  }
+			.cart-modal {
+				width: 95%;
+			}
 		}
 
-		/* For small mobile screens */
 		@media (max-width: 480px) {
-		  h2 {
-			font-size: 1.2rem;
-		  }
+			.top-navbar .nav-title {
+				font-size: 20px;
+			}
 
-		  h3 {
-			font-size: 1rem;
-		  }
+			.product h3 {
+				font-size: 1rem;
+			}
 
-		  .cart-details .cart-table {
-			font-size: 0.8rem;
-		  }
+			.product .price {
+				font-size: 0.9rem;
+			}
 
-		  button {
-			width: 100%;
-			padding: 12px;
-		  }
+			.product button {
+				padding: 8px 10px;
+				font-size: 0.9rem;
+			}
+
+			.cart-footer .total-price {
+				font-size: 1rem;
+			}
 		}
-		
-				/* Desktop - keep inside sidebar */
-		.home-button {
-		  display: block;
-		  width: 90%;
-		  margin: 10px auto;
-		  padding: 10px;
-		  font-size: 1rem;
-		  background: #fff;
-		  border: 1px solid #ccc;
-		  border-radius: 8px;
-		  cursor: pointer;
-		}
-
-
-		.home-button {
-		  display: block;
-		  width: 90%;
-		  margin: 10px auto;
-		  padding: 10px;
-		  font-size: 1rem;
-		  text-align: center;
-		  background: #fff;
-		  border: 1px solid #ccc;
-		  border-radius: 8px;
-		  color: #333;
-		  text-decoration: none;
-		  cursor: pointer;
-		}
-
-		/* Mobile (make it float) */
-		@media (max-width: 768px) {
-		  .home-button {
-			position: fixed;
-			bottom: 15px;
-			left: 50%;
-			transform: translateX(-50%);
-			width: 90%;
-			max-width: 300px;
-			z-index: 2000;
-			background: #fff;
-			border: 2px solid #007bff;
-			color: #007bff;
-			font-weight: bold;
-			box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-		  }
-
-		  /* Hide sidebar version on mobile */
-		  .sidebar .home-button {
-			display: none;
-		  }
-		}
-
 
 
     </style>
 </head>
 <body>
-    <div class="sidebar">
-    <h2>Categories</h2>
-    <ul>
-        <li><a href="#" class="active">All Products</a></li>
-        <li><a href="#">Necklaces</a></li>
-        <li><a href="#">Earrings</a></li>
-        <li><a href="#">Bracelets</a></li>
-        <li><a href="#">Rings</a></li>
-    </ul>
-	<a href="index.html" class="home-button">Home Page</a>
+<!-- Top Navigation Bar -->
+<div class="top-navbar">
+  <div class="nav-title">Aarul Jewellery</div>
+  <nav class="nav-links">
+    <a href="#">All Products</a>
+    <a href="#">Necklaces</a>
+    <a href="#">Earrings</a>
+    <a href="#">Bracelets</a>
+    <a href="#">Rings</a>
+    <a href="index.html" class="home-button">Home Page</a>
+  </nav>
 </div>
 
+<!-- Your Main Content -->
+<div class="content">
+  <h1>Our Collection</h1>
+  <div class="product-grid">
+    <!-- Product cards go here -->
+  </div>
+</div>
 
 
     <div class="content">
